--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		let selected = clippings[Math.floor(Math.random() * clippings.length)]
 		console.log(selected)
 		let $highlight = document.querySelector("#highlight")
-		let $citation = document.querySelector("#citiation")
+		let $citation = document.querySelector("#citation")
 		$highlight.innerText = selected[0]
 		$citation.innerText = selected[1]
 		</script>
