--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 	src: url('/fonts/woff2/plex/IBMPlexMono-Regular.woff2') format('woff2'), url('/fonts/woff/plex/IBMPlexMono-Regular.woff') format('woff');
 }
 html { font-family: custom; font-size: 16px; line-height: 1.5; background: #efefef; }
-#highlight { max-width: 60ch; margin-bottom: 6px; }
+		body { margin: 0; padding-left: 1ch; padding-right: 1ch; padding-top: 12px; padding-bottom: 12px; }
+#highlight { max-width: 60ch; margin-bottom: 12px; }
 #citation { font-size: 12px; line-height: 1.5; max-width: 60ch; text-indent: 1ch; }
    </style>
 
