--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 }
 html { font-family: custom; font-size: 16px; line-height: 1.5; background: #efefef; }
 		body { margin: 0; padding-left: 1ch; padding-right: 1ch; padding-top: 12px; padding-bottom: 12px; }
-#highlight { max-width: 60ch; margin-bottom: 12px; }
-#citation { font-size: 12px; line-height: 1.5; max-width: 60ch; text-indent: 1ch; }
+#highlight { max-width: 60ch; margin-bottom: 12px; margin-left: auto; margin-right: auto; }
+#citation { font-size: 12px; line-height: 1.5; max-width: 60ch; margin-left: auto; margin-right: auto; }
    </style>
 
 
-   </head>
+   </head> 
    <body>
 	   <div id="highlight"></div>
 	   <div id="citation"></div>
