--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	src: url('/fonts/woff2/plex/IBMPlexMono-Regular.woff2') format('woff2'), url('/fonts/woff/plex/IBMPlexMono-Regular.woff') format('woff');
 }
 html { font-family: custom; font-size: 16px; line-height: 1.5; background: #efefef; }
-		body { margin: 0; padding-left: 1ch; padding-right: 1ch; padding-top: 12px; padding-bottom: 12px; display: flex; align-items: center; justify-content: center; height: 100vh; }
+		body { box-sizing: border-box; margin: 0; padding-left: 1ch; padding-right: 1ch; padding-top: 12px; padding-bottom: 48px; display: flex; align-items: center; justify-content: center; height: 100vh; }
 #highlight { max-width: 60ch; margin-bottom: 12px; }
 #citation { font-size: 12px; line-height: 1.5; max-width: 60ch; margin-left: auto; margin-right: auto; }
    </style>
