--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ html { font-family: custom; font-size: 16px; line-height: 1.5; background: #efef
 
    </head> 
    <body>
-	   <div style="width: 60ch">
+	   <div style="width: 60ch; padding-left: 4ch; padding-right: 4ch; padding-top: 24px; padding-bottom: 24px; background: white;">
 	   <div id="highlight"></div>
 	   <div id="citation"></div>
 	   </div>
