--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	src: url('/fonts/woff2/plex/IBMPlexMono-Regular.woff2') format('woff2'), url('/fonts/woff/plex/IBMPlexMono-Regular.woff') format('woff');
 }
 html { font-family: custom; font-size: 16px; line-height: 1.5; background: #efefef; }
-		body { box-sizing: border-box; margin: 0; padding-left: 1ch; padding-right: 1ch; padding-top: 12px; padding-bottom: 48px; display: flex; align-items: center; justify-content: center; height: 100vh; }
+		body { box-sizing: border-box; margin: 0; padding-left: 1ch; padding-right: 1ch; padding-top: 12px; padding-bottom: 12px; }
 #highlight { max-width: 60ch; margin-bottom: 12px; }
 #citation { font-size: 12px; line-height: 1.5; max-width: 60ch; margin-left: auto; margin-right: auto; }
    </style>
@@ -23,7 +23,7 @@ html { font-family: custom; font-size: 16px; line-height: 1.5; background: #efef
 
    </head> 
    <body>
-	   <div style="width: 60ch; padding-left: 4ch; padding-right: 4ch; padding-top: 24px; padding-bottom: 24px; background: white;">
+	   <div style="width: 60ch;">
 	   <div id="highlight"></div>
 	   <div id="citation"></div>
 	   </div>
