--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ html { font-family: custom; font-size: 16px; line-height: 1.5; background: #efef
     </style>
    </head> 
    <body>
-	   <div style="width: 60ch;">
+	   <div style="max-width: 60ch;">
 	   <div id="highlight"></div>
 	   <div id="citation"></div>
 	   </div>
